# stacks-sbtc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  README.md  bitcoin-debug.diff  stacks_coordinator_design.md
.github/ISSUE_TEMPLATE/: risk-issue.md
.github/workflows/: clarinet.yml  dco.yml  rust.yml
.install/: bitcoin.sh  macos-latest.sh  ubuntu-latest.sh
commit-reveal-reference/: Cargo.toml
commit-reveal-reference/src/: lib.rs
frost-coordinator/: Cargo.toml
frost-coordinator/conf/: stacker.toml
frost-coordinator/src/: coordinator.rs  lib.rs  main.rs
frost-signer/: Cargo.toml
frost-signer/conf/: signer.toml  stacker.toml
frost-signer/src/: config.rs  lib.rs  main.rs  net.rs  signer.rs  signing_round.rs
frost-signer/tests/: messages.rs
frost-test/: Cargo.toml  README.md  rust-btc.decode.failure
frost-test/docs/: frost-btc.md
frost-test/src/: bitcoind.rs  event.rs  lib.rs  new_vec.rs  participant.rs  signer.rs  sync_test.rs
frost-test/src/event/: mod.rs  protocol.rs
frost-test/src/event/dkg/: begin.rs  end.rs  mod.rs  share.rs
frost-test/src/event/sign/: begin.rs  mod.rs  nonce.rs  share.rs
frost-test/tests/: frost-btc.rs  pure_frost.rs  server.rs
minedoc/: Cargo.toml  README.md
minedoc/src/: cli.rs  main.rs
misc/bitcoin_rpc_scripts/: createwallet.sh  importaddress.sh
relay-server/: README.md
relay-server/src/: io_stream.rs  lib.rs  mem_state.rs  proxy_state.rs  server.rs  state.rs
sbtc-cli/: README.md
sbtc-cli/src/: main.rs
sbtc-mini/: .gitignore  Clarinet.toml  README.md
sbtc-mini/.mermaid/: generated-mermaid.mmd
sbtc-mini/.test-2/: deps.ts  sbtc-stacking-pool_test.ts
sbtc-planning/: README.md
stacks-coordinator/: Cargo.toml
stacks-coordinator-mini/: README.md
stacks-doctor/: Cargo.toml
stacks-signer/: Cargo.toml  README.md
stacks-signer-api/: Cargo.toml  README.md  outdated-README.md
stacks-signer-api/src/: error.rs  key.rs  main.rs  signer.rs  transaction.rs  vote.rs
stacks-signer-api/src/db/: keys.rs  mod.rs  signers.rs  transaction.rs  vote.rs
stacks-signer-api/src/routes/: keys.rs  mod.rs  signers.rs  transaction.rs  vote.rs
team-book/: book.toml
team-reference/: book.toml
test-utils/: Cargo.toml  Stacks.toml
(+110 files in other folders)
