[package]
name = "commit-reveal-reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin.workspace = true
blockstack-core.workspace = true
secp256k1 = { version="0.27.0", features=["global-context", "recovery"] }
