[package]
name = "frost-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4"
bincode = "1.3.3"
clap = { version = "4.1.1", features = ["derive"] }
frost = { git = "https://github.com/trust-machines/frost", branch = "sbtc" }
hashbrown = { version = "0.13", features = ["serde"] }
itertools = "^0.10.5"
rand_core = { version  = "0.5"}
p256k1 = { git = "https://github.com/Trust-Machines/p256k1", branch = "sbtc" }
serde = { version = "1.0", features = ["serde_derive"] }
sha3 = "0.10.6"
thiserror = "1.0"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ureq = { version = "2.6", features = [] }
frost-signer = { version = "0.0.1", path = "../frost-signer" }
