[package]
name = "stacks-signer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls", "offline"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = "3.3.0"
warp = "0.3.5"
dotenv = "0.15.0"

[dev-dependencies]
ntest = "0.9.0"
